Add all 36 product pages to sitemap, update logo to SVG on all pages, and add favicon

--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,14 @@
     <title>Contact Supreme Valves India | Request a Quote</title>
     <meta name="description" content="Contact Supreme Valves India for inquiries, quotes, or support. Reach us via phone, email, WhatsApp, or our contact form.">
     <meta name="keywords" content="contact valve exporter, request a quote valves, valve supplier Ahmedabad, Supreme Valves address">
+    <link rel="icon" type="image/svg+xml" href="assets/Supreme Valves.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="assets/logo.jpg" alt="Supreme Valves India Logo"></a>
+                <a href="index.html"><img src="assets/Supreme Valves.svg" alt="Supreme Valves India Logo"></a>
             </div>
             <nav>
                 <ul>
