--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Supreme Valves India">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.supremevalves.in/">
+    <link rel="icon" type="image/svg+xml" href="assets/Supreme Valves.svg">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
