--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Projects Gallery | Supreme Valves India</title>
     <meta name="description" content="View our project gallery to see our industrial valves in action. High-quality images of our manufacturing, packaging, and export operations.">
     <meta name="keywords" content="valve projects, industrial valve gallery, valve manufacturing photos, valve export images">
+    <link rel="icon" type="image/svg+xml" href="assets/Supreme Valves.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
