--- a/resources.html
+++ b/resources.html
@@ -6,13 +6,14 @@
     <title>Technical Resources & Datasheets | Supreme Valves India</title>
     <meta name="description" content="Download technical datasheets, product catalogues, and find answers to frequently asked questions about our industrial valves.">
     <meta name="keywords" content="valve datasheets, valve catalogue download, industrial valve FAQs, technical resources valves">
+    <link rel="icon" type="image/svg+xml" href="assets/Supreme Valves.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="assets/logo.jpg" alt="Supreme Valves India Logo"></a>
+                <a href="index.html"><img src="assets/Supreme Valves.svg" alt="Supreme Valves India Logo"></a>
             </div>
             <nav>
                 <ul>
