Add FAQs to navigation, FAQ schema markup, and update sitemap
- Added FAQs menu item to all main pages (index, about, products, industries, projects, resources, contact)
- Added FAQ Schema Markup (schema.org/FAQPage) to valve-types-selection.html and valve-classes-ratings.html for Google rich snippets
- Updated sitemap.xml with all 9 FAQ pages (hub + 8 categories) with high priority (0.8-0.9)
- FAQ pages now eligible for featured snippets in Google search results
- Improved SEO and discoverability of FAQ content

--- a/faqs/valve-classes-ratings.html
+++ b/faqs/valve-classes-ratings.html
@@ -7,6 +7,40 @@
     <meta name="description" content="Comprehensive guide to valve pressure classes, PN vs Class ratings, ANSI vs API standards, and how to select the correct rating for your application.">
     <meta name="keywords" content="valve class 150, valve class 300, valve class 600, PN rating, ANSI valve, API valve, pressure rating, temperature rating, valve standards">
     <link rel="icon" type="image/svg+xml" href="../assets/Supreme Valves.svg">
+    
+    <!-- FAQ Schema Markup for Google Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What do valve class ratings (Class 150, 300, 600, etc.) mean?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Valve class ratings indicate the maximum pressure a valve can handle at specific temperatures, as defined by ASME B16.34 and ASME B16.5 standards. Class 150: Up to 19.6 bar (285 psi) at 38°C, Class 300: Up to 51 bar (740 psi) at 38°C, Class 600: Up to 102 bar (1480 psi) at 38°C, Class 900: Up to 153 bar (2220 psi) at 38°C, Class 1500: Up to 255 bar (3705 psi) at 38°C, Class 2500: Up to 425 bar (6170 psi) at 38°C. Pressure ratings decrease as temperature increases."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is the difference between PN and Class ratings?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "PN (Pressure Nominal) is a European designation (EN/DIN standards), while Class is an American designation (ASME/ANSI standards). Approximate conversions: PN 10/16 ≈ Class 150, PN 25/40 ≈ Class 300, PN 63 ≈ Class 600, PN 100 ≈ Class 900. PN ratings represent nominal pressure in bars at 20°C, while Class ratings vary with temperature."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is the difference between ANSI and API valves?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "ANSI/ASME valves are general industrial applications per ASME B16.34. API valves are oil & gas specific per API 600, 602, 6D, 6A with more stringent requirements, extensive testing, tighter tolerances, comprehensive documentation, and are 20-40% more expensive. Use API for oil & gas production, refining, petrochemical, and critical service applications."
+          }
+        }
+      ]
+    }
+    </script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
