--- a/faqs/valve-types-selection.html
+++ b/faqs/valve-types-selection.html
@@ -7,6 +7,40 @@
     <meta name="description" content="Expert answers on different valve types including gate, globe, ball, check, butterfly, control, diaphragm, knife gate, plug, and needle valves.">
     <meta name="keywords" content="gate valve vs globe valve, ball valve applications, check valve types, butterfly valve selection, control valve sizing, diaphragm valve uses, knife gate valve, plug valve, needle valve, valve selection guide">
     <link rel="icon" type="image/svg+xml" href="../assets/Supreme Valves.svg">
+    
+    <!-- FAQ Schema Markup for Google Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What is the difference between a gate valve and a globe valve?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Gate valves are designed for on/off service with minimal pressure drop. They feature a straight-through flow path and a wedge that moves perpendicular to flow. Best for fully open/closed applications, minimal pressure drop, and infrequent operation. Globe valves are designed for throttling and flow regulation with a Z-shaped internal path. Best for flow control, frequent operation, and precise regulation."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "When should I use a ball valve instead of a gate valve?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Choose a ball valve for quick operation (90° turn), tight shut-off with minimal leakage, compact design, lower cost for smaller sizes, bi-directional flow, and clean non-abrasive fluids. Choose a gate valve for larger sizes (DN 150+), high-temperature applications (above 200°C), minimal pressure drop in fully open position, and compliance with API 600/602 standards."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What are the different types of check valves and their applications?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "1. Swing Check Valve: Disc swings on a hinge, best for low-velocity applications and horizontal lines. 2. Lift Check Valve: Disc lifts vertically, ideal for high-pressure systems and steam service. 3. Wafer Check Valve: Compact, lightweight design between flanges. 4. Dual Plate Check Valve: Two spring-loaded plates, excellent for low-pressure drop. 5. Non-Slam Check Valve: Prevents water hammer, essential for pump discharge lines. 6. Tilting Disc Check Valve: Disc tilts on a shaft, suitable for large diameter pipes."
+          }
+        }
+      ]
+    }
+    </script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
