--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <li><a href="industries.html">Industries</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="resources.html">Resources</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
