--- a/industries.html
+++ b/industries.html
@@ -27,6 +27,7 @@
                     <li><a href="industries.html" class="active">Industries</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="resources.html">Resources</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -140,6 +141,7 @@
                         <li><a href="industries.html">Industries</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resources.html">Resources</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="#">Blogs</a></li>
                     </ul>
