--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
                     <li><a href="industries.html">Industries</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="resources.html">Resources</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
                     <li><a href="contact.html" class="active">Contact Us</a></li>
                 </ul>
             </nav>
@@ -93,6 +94,7 @@
                         <li><a href="industries.html">Industries</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resources.html">Resources</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="#">Blogs</a></li>
                     </ul>
