SEO Optimization: Add 95+ keywords, optimize homepage and product pages, create IBR and Middle East landing pages

--- a/products/ball-valve.html
+++ b/products/ball-valve.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ball Valve | Industrial Valves | Supreme Valves India</title>
-    <meta name="description" content="Quick-acting ball valves for tight shut-off and minimal pressure drop. Export quality Ball Valves from Supreme Valves India. Serving Oil & Gas, Water, Chemical industries.">
-    <meta name="keywords" content="Ball Valve, Ball Valves, Quarter-Turn Valves, industrial valves, valve exporter India, Oil & Gas, Water, Chemical">
+    <title>Ball Valve Manufacturer & Exporter India | Floating & Trunnion Ball Valves | Supreme Valves</title>
+    <meta name="description" content="Leading ball valve manufacturer & exporter in India. Floating ball valves, trunnion mounted ball valves, 3-piece ball valves. API 6D, ASME B16.34 certified. Carbon steel, stainless steel, duplex. 1/2" to 48". Export to Middle East, UAE, Saudi Arabia. Oil & gas, chemical, water applications.">
+    <meta name="keywords" content="ball valve manufacturer India, ball valve exporter, floating ball valve, trunnion mounted ball valve, 3 piece ball valve, 2 piece ball valve, ball valve supplier Ahmedabad, stainless steel ball valve, carbon steel ball valve, API 6D ball valve, flanged ball valve, threaded ball valve, ball valve exporter Middle East, ball valve manufacturer for oil and gas, high pressure ball valve, full bore ball valve, reduced bore ball valve">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -80,8 +80,8 @@
             </div>
             <div>
                 <span style="display: inline-block; padding: 0.5rem 1rem; background: var(--lighter-gray); color: var(--accent-color); border-radius: 6px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem;">Quarter-Turn Valves</span>
-                <h1 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 1rem;">Ball Valve</h1>
-                <p style="font-size: 1.15rem; line-height: 1.8; color: var(--text-color); margin-bottom: 2rem;">Quick-acting ball valves for tight shut-off and minimal pressure drop.</p>
+                <h1 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 1rem;">Ball Valve Manufacturer & Exporter</h1>
+                <p style="font-size: 1.15rem; line-height: 1.8; color: var(--text-color); margin-bottom: 2rem;">Leading manufacturer and exporter of API 6D certified floating ball valves, trunnion mounted ball valves, and 3-piece ball valves. Quick-acting quarter-turn operation for tight shut-off and minimal pressure drop in oil & gas, chemical, and water applications.</p>
                 
                 <div style="background: var(--lighter-gray); padding: 1.5rem; border-radius: 12px; margin-bottom: 2rem;">
                     <h3 style="font-size: 1.1rem; color: var(--primary-color); margin-bottom: 1rem;">Key Applications</h3>
@@ -131,7 +131,7 @@
                         </tr>
                         <tr>
                             <td style="padding: 1.25rem 1.5rem; font-weight: 600; color: var(--primary-color); background: var(--lighter-gray);">Standards</td>
-                            <td style="padding: 1.25rem 1.5rem; color: var(--text-color);">ASME B16.34, API 600, API 602, BS 1873, DIN 3352</td>
+                            <td style="padding: 1.25rem 1.5rem; color: var(--text-color);">API 6D, API 608, ASME B16.34, ASME B16.5, BS 5351, ISO 17292</td>
                         </tr>
                     </tbody>
                 </table>
@@ -146,15 +146,15 @@
                     <div class="icon" style="background: linear-gradient(135deg, var(--accent-color), #c0392b);">
                         <i class="fas fa-industry" style="color: white; font-size: 1.5rem;"></i>
                     </div>
-                    <h3>Carbon Steel</h3>
-                    <p>ASTM A216 WCB, A105, A350 LF2</p>
+                    <h3>Carbon Steel Ball Valves</h3>
+                    <p>ASTM A216 WCB, A105, A350 LF2, Forged Carbon Steel</p>
                 </div>
                 <div class="feature-item">
                     <div class="icon" style="background: linear-gradient(135deg, var(--accent-secondary), #2980b9);">
                         <i class="fas fa-shield-alt" style="color: white; font-size: 1.5rem;"></i>
                     </div>
-                    <h3>Stainless Steel</h3>
-                    <p>SS304, SS316, SS316L, SS321, SS347</p>
+                    <h3>Stainless Steel Ball Valves</h3>
+                    <p>ASTM A351 CF8M (SS316), CF8 (SS304), SS316L, SS304L, SS321</p>
                 </div>
                 <div class="feature-item">
                     <div class="icon" style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));">
@@ -167,8 +167,8 @@
                     <div class="icon" style="background: linear-gradient(135deg, #e67e22, #d35400);">
                         <i class="fas fa-gem" style="color: white; font-size: 1.5rem;"></i>
                     </div>
-                    <h3>Duplex Steel</h3>
-                    <p>F51, F53, F55, Super Duplex</p>
+                    <h3>Duplex & Super Duplex Ball Valves</h3>
+                    <p>F51 (Duplex 2205), F53 (Super Duplex 2507), F55, UNS S31803, S32750</p>
                 </div>
                 <div class="feature-item">
                     <div class="icon" style="background: linear-gradient(135deg, #9b59b6, #8e44ad);">
