--- a/products/gate-valve.html
+++ b/products/gate-valve.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gate Valve | Industrial Valves | Supreme Valves India</title>
-    <meta name="description" content="High-performance gate valves for reliable on-off control in industrial applications. Export quality Gate Valves from Supreme Valves India. Serving Oil & Gas, Petrochemical, Water Treatment industries.">
-    <meta name="keywords" content="Gate Valve, Gate Valves, Control Valves, industrial valves, valve exporter India, Oil & Gas, Petrochemical, Water Treatment">
+    <title>Gate Valve Manufacturer & Exporter India | API 600 Gate Valves | Supreme Valves</title>
+    <meta name="description" content="Leading gate valve manufacturer & exporter in India. API 600, ASME B16.34 certified rising stem & non-rising stem gate valves. Carbon steel, stainless steel, duplex. Sizes 1/2" to 48". IBR certified. Serving oil & gas, petrochemical, water treatment industries. Export to Middle East, Africa, Asia.">
+    <meta name="keywords" content="gate valve manufacturer India, gate valve exporter, API 600 gate valve, rising stem gate valve, non-rising stem gate valve, gate valve supplier Ahmedabad, carbon steel gate valve, stainless steel gate valve, duplex steel gate valve, flanged gate valve, gate valve manufacturer for oil and gas, IBR certified gate valve, ASME B16.34 gate valve, pressure seal gate valve, forged steel gate valve, cast steel gate valve, gate valve exporter Middle East, gate valve supplier UAE">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -80,8 +80,8 @@
             </div>
             <div>
                 <span style="display: inline-block; padding: 0.5rem 1rem; background: var(--lighter-gray); color: var(--accent-color); border-radius: 6px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem;">Control Valves</span>
-                <h1 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 1rem;">Gate Valve</h1>
-                <p style="font-size: 1.15rem; line-height: 1.8; color: var(--text-color); margin-bottom: 2rem;">High-performance gate valves for reliable on-off control in industrial applications.</p>
+                <h1 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 1rem;">Gate Valve Manufacturer & Exporter</h1>
+                <p style="font-size: 1.15rem; line-height: 1.8; color: var(--text-color); margin-bottom: 2rem;">Leading manufacturer and exporter of API 600, ASME B16.34 certified gate valves including rising stem gate valves, non-rising stem gate valves, and pressure seal gate valves for oil & gas, petrochemical, and water treatment applications.</p>
                 
                 <div style="background: var(--lighter-gray); padding: 1.5rem; border-radius: 12px; margin-bottom: 2rem;">
                     <h3 style="font-size: 1.1rem; color: var(--primary-color); margin-bottom: 1rem;">Key Applications</h3>
@@ -131,7 +131,7 @@
                         </tr>
                         <tr>
                             <td style="padding: 1.25rem 1.5rem; font-weight: 600; color: var(--primary-color); background: var(--lighter-gray);">Standards</td>
-                            <td style="padding: 1.25rem 1.5rem; color: var(--text-color);">ASME B16.34, API 600, API 602, BS 1873, DIN 3352</td>
+                            <td style="padding: 1.25rem 1.5rem; color: var(--text-color);">API 600, API 602, ASME B16.34, ASME B16.5, BS 1873, DIN 3352, MSS SP-70</td>
                         </tr>
                     </tbody>
                 </table>
@@ -146,15 +146,15 @@
                     <div class="icon" style="background: linear-gradient(135deg, var(--accent-color), #c0392b);">
                         <i class="fas fa-industry" style="color: white; font-size: 1.5rem;"></i>
                     </div>
-                    <h3>Carbon Steel</h3>
-                    <p>ASTM A216 WCB, A105, A350 LF2</p>
+                    <h3>Carbon Steel Gate Valves</h3>
+                    <p>ASTM A216 WCB, A105, A350 LF2, A352 LCC</p>
                 </div>
                 <div class="feature-item">
                     <div class="icon" style="background: linear-gradient(135deg, var(--accent-secondary), #2980b9);">
                         <i class="fas fa-shield-alt" style="color: white; font-size: 1.5rem;"></i>
                     </div>
-                    <h3>Stainless Steel</h3>
-                    <p>SS304, SS316, SS316L, SS321, SS347</p>
+                    <h3>Stainless Steel Gate Valves</h3>
+                    <p>ASTM A351 CF8 (SS304), CF8M (SS316), CF3 (SS304L), CF3M (SS316L), SS321, SS347</p>
                 </div>
                 <div class="feature-item">
                     <div class="icon" style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));">
@@ -167,8 +167,8 @@
                     <div class="icon" style="background: linear-gradient(135deg, #e67e22, #d35400);">
                         <i class="fas fa-gem" style="color: white; font-size: 1.5rem;"></i>
                     </div>
-                    <h3>Duplex Steel</h3>
-                    <p>F51, F53, F55, Super Duplex</p>
+                    <h3>Duplex & Super Duplex Gate Valves</h3>
+                    <p>F51 (UNS S31803), F53 (UNS S32750), F55 (UNS S32760), Super Duplex</p>
                 </div>
                 <div class="feature-item">
                     <div class="icon" style="background: linear-gradient(135deg, #9b59b6, #8e44ad);">
