Add navigation links to IBR certification and Middle East export landing pages across site

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                         <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ 38+ Years of Valve Manufacturing Expertise:</strong> Led by Zahid Ranginwala, a valve technology expert and industry veteran since 1986</li>
                         <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ Comprehensive Product Range:</strong> From gate valves to automated control systems, we supply solutions for every industrial need</li>
                         <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ Application Engineering Expertise:</strong> Technical support for valve selection, sizing, and automation</li>
-                        <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ Global Export Excellence:</strong> Leading valve exporter to Middle East (UAE, Saudi Arabia, Qatar, Oman, Kuwait), Africa, Asia with export-grade packing, documentation, and logistics support</li>
-                        <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ IBR & ISO Certified:</strong> IBR certified valve manufacturer with ISO certification, complete material traceability, MTCs, and international standards compliance (API 600, ASME B16.34, API 602)</li>
+                        <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ Global Export Excellence:</strong> Leading valve exporter to Middle East (UAE, Saudi Arabia, Qatar, Oman, Kuwait), Africa, Asia with export-grade packing, documentation, and logistics support <a href="valve-exporter-middle-east.html" style="color: var(--accent-color); text-decoration: underline;">Learn More →</a></li>
+                        <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ IBR & ISO Certified:</strong> IBR certified valve manufacturer with ISO certification, complete material traceability, MTCs, and international standards compliance (API 600, ASME B16.34, API 602) <a href="ibr-certified-valve-manufacturer.html" style="color: var(--accent-color); text-decoration: underline;">Learn More →</a></li>
                         <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ Fast Delivery:</strong> Quick response times, competitive quotes, and on-time deliveries</li>
                         <li style="margin-bottom: 0.75rem;"><strong style="color: var(--accent-color);">✓ Wide Industry Applications:</strong> Serving oil & gas, petrochemical, water, HVAC, chemical, marine, and power sectors</li>
                     </ul>
@@ -155,6 +155,16 @@
                 <p style="font-size: 1.15rem; line-height: 1.9; color: var(--text-color); margin-top: 2rem; text-align: center; font-weight: 600;">
                     With decades of valve technology expertise and an unwavering commitment to customer satisfaction, Supreme Valves India is your trusted partner for industrial valve solutions worldwide. Whether your requirements are standard or specialized, our comprehensive product range and technical expertise are designed to exceed expectations.
                 </p>
+                
+                <!-- Quick Links to Key Pages -->
+                <div style="display: flex; gap: 1.5rem; justify-content: center; margin-top: 3rem; flex-wrap: wrap;">
+                    <a href="ibr-certified-valve-manufacturer.html" class="btn btn-primary" style="font-size: 1.05rem; padding: 0.9rem 2rem;">
+                        <i class="fas fa-certificate"></i> IBR Certified Valves
+                    </a>
+                    <a href="valve-exporter-middle-east.html" class="btn btn-secondary" style="font-size: 1.05rem; padding: 0.9rem 2rem;">
+                        <i class="fas fa-globe"></i> Export to Middle East
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -320,7 +330,8 @@
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="ibr-certified-valve-manufacturer.html">IBR Certified Valves</a></li>
+                        <li><a href="valve-exporter-middle-east.html">Export to Middle East</a></li>
                     </ul>
                 </div>
             </div>
