--- a/products/gate-valve.html
+++ b/products/gate-valve.html
@@ -201,9 +201,9 @@
                 <div style="background: var(--lighter-gray); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--accent-color);">
                     <h3 style="color: var(--primary-color); margin-bottom: 1rem; display: flex; align-items: center; gap: 0.75rem;">
                         <i class="fas fa-check-circle" style="color: var(--accent-color);"></i>
-                        Quality Assurance
+                        IBR Certified & Quality Assured
                     </h3>
-                    <p style="color: var(--text-color); line-height: 1.7;">Complete material traceability, mill test certificates, and compliance with international standards.</p>
+                    <p style="color: var(--text-color); line-height: 1.7;">Complete material traceability, mill test certificates, and compliance with international standards. <a href="../ibr-certified-valve-manufacturer.html" style="color: var(--accent-color); text-decoration: underline;">View IBR Certification →</a></p>
                 </div>
                 <div style="background: var(--lighter-gray); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--accent-color);">
                     <h3 style="color: var(--primary-color); margin-bottom: 1rem; display: flex; align-items: center; gap: 0.75rem;">
@@ -219,6 +219,19 @@
                     </h3>
                     <p style="color: var(--text-color); line-height: 1.7;">Technical assistance for valve selection, sizing, and application engineering from our experienced team.</p>
                 </div>
+            </div>
+        </section>
+
+        <!-- Export Information Banner -->
+        <section style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); padding: 3rem 0; margin-bottom: 4rem;">
+            <div class="container" style="text-align: center; color: white;">
+                <h2 style="font-size: 2rem; margin-bottom: 1rem; color: white;">Export Gate Valves to Middle East</h2>
+                <p style="font-size: 1.1rem; margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto;">
+                    We export API 600 gate valves to UAE, Saudi Arabia, Qatar, Oman, Kuwait with complete documentation and logistics support.
+                </p>
+                <a href="../valve-exporter-middle-east.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.05rem; padding: 0.9rem 2rem;">
+                    <i class="fas fa-globe"></i> Learn About Our Export Services
+                </a>
             </div>
         </section>
 
