--- a/faqs/valve-classes-ratings.html
+++ b/faqs/valve-classes-ratings.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <header>
+        <header>
         <div class="container">
             <div class="logo">
                 <a href="../index.html"><img src="../assets/Supreme Valves.svg" alt="Supreme Valves India Logo"></a>
@@ -71,10 +71,16 @@
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about.html">About Us</a></li>
-                    <li><a href="../products.html">Products</a></li>
+                    <li class="dropdown">
+                        <a href="../products.html" class="dropbtn">Products <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content" id="products-dropdown">
+                            <!-- Products will be dynamically loaded here -->
+                        </div>
+                    </li>
                     <li><a href="../industries.html">Industries</a></li>
                     <li><a href="../projects.html">Projects</a></li>
                     <li><a href="../resources.html">Resources</a></li>
+                    <li><a href="../faqs.html" class="active">FAQs</a></li>
                     <li><a href="../contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -224,7 +230,7 @@
                     <ul id="footer-products-list" class="footer-products-multicolumn"></ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Quick Links</h4>
+                                        <h4>Quick Links</h4>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../about.html">About Us</a></li>
@@ -233,6 +239,8 @@
                         <li><a href="../projects.html">Projects</a></li>
                         <li><a href="../resources.html">Resources</a></li>
                         <li><a href="../contact.html">Contact Us</a></li>
+                        <li><a href="../ibr-certified-valve-manufacturer.html">IBR Certified Valves</a></li>
+                        <li><a href="../valve-exporter-middle-east.html">Export to Middle East</a></li>
                     </ul>
                 </div>
             </div>
@@ -254,12 +262,13 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-socials">
-                <a href="https://www.facebook.com/p/Supreme-Enterprise-61566023002189/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/supremevalvesindia/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/supreme-valves-india/posts/?feedView=all" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://x.com/SupremeValves" target="_blank"><i class="fab fa-x-twitter"></i></a>
-                <a href="https://www.youtube.com/@SupremeValves" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <div class="footer-socials">
+                <a href="https://www.facebook.com/p/Supreme-Enterprise-61566023002189/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/supremevalvesindia/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/supreme-valves-india/posts/?feedView=all" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://x.com/SupremeValves" target="_blank" aria-label="Twitter/X"><i class="fab fa-x-twitter"></i></a>
+                <a href="https://www.youtube.com/@SupremeValves" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" aria-label="Pinterest"><i class="fab fa-pinterest-p"></i></a>
             </div>
             <div class="copyright">&copy; 2025 Supreme Valves India. All Rights Reserved.</div>
         </div>
