--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
-    <header>
+        <header>
         <div class="container">
             <div class="logo">
                 <a href="index.html"><img src="assets/Supreme Valves.svg" alt="Supreme Valves India Logo"></a>
@@ -23,7 +23,12 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="products.html" class="active">Products</a></li>
+                    <li class="dropdown">
+                        <a href="products.html" class="dropbtn" class="active">Products <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content" id="products-dropdown">
+                            <!-- Products will be dynamically loaded here -->
+                        </div>
+                    </li>
                     <li><a href="industries.html">Industries</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="resources.html">Resources</a></li>
@@ -58,7 +63,7 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Quick Links</h4>
+                                        <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
@@ -66,9 +71,9 @@
                         <li><a href="industries.html">Industries</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resources.html">Resources</a></li>
-                    <li><a href="faqs.html">FAQs</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="ibr-certified-valve-manufacturer.html">IBR Certified Valves</a></li>
+                        <li><a href="valve-exporter-middle-east.html">Export to Middle East</a></li>
                     </ul>
                 </div>
             </div>
@@ -95,7 +100,7 @@
                 </div>
             </div>
             
-            <div class="footer-socials">
+                        <div class="footer-socials">
                 <a href="https://www.facebook.com/p/Supreme-Enterprise-61566023002189/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/supremevalvesindia/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/company/supreme-valves-india/posts/?feedView=all" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
