--- a/products/pressure-safety-valve.html
+++ b/products/pressure-safety-valve.html
@@ -37,19 +37,25 @@
     </script>
 </head>
 <body>
-    <header>
+        <header>
         <div class="container">
             <div class="logo">
-                <a href="../index.html"><img src="../assets/logo.jpg" alt="Supreme Valves India Logo"></a>
+                <a href="../index.html"><img src="../assets/Supreme Valves.svg" alt="Supreme Valves India Logo"></a>
             </div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about.html">About Us</a></li>
-                    <li><a href="../products.html" class="active">Products</a></li>
+                    <li class="dropdown">
+                        <a href="../products.html" class="dropbtn" class="active">Products <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-content" id="products-dropdown">
+                            <!-- Products will be dynamically loaded here -->
+                        </div>
+                    </li>
                     <li><a href="../industries.html">Industries</a></li>
                     <li><a href="../projects.html">Projects</a></li>
                     <li><a href="../resources.html">Resources</a></li>
+                    <li><a href="../faqs.html">FAQs</a></li>
                     <li><a href="../contact.html">Contact Us</a></li>
                 </ul>
             </nav>
