--- a/valve-exporter-middle-east.html
+++ b/valve-exporter-middle-east.html
@@ -41,7 +41,7 @@
     </script>
 </head>
 <body>
-    <header>
+        <header>
         <div class="container">
             <div class="logo">
                 <a href="index.html"><img src="assets/Supreme Valves.svg" alt="Supreme Valves India Logo"></a>
@@ -52,7 +52,9 @@
                     <li><a href="about.html">About Us</a></li>
                     <li class="dropdown">
                         <a href="products.html" class="dropbtn">Products <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-content" id="products-dropdown"></div>
+                        <div class="dropdown-content" id="products-dropdown">
+                            <!-- Products will be dynamically loaded here -->
+                        </div>
                     </li>
                     <li><a href="industries.html">Industries</a></li>
                     <li><a href="projects.html">Projects</a></li>
@@ -309,7 +311,7 @@
                     <ul id="footer-products-list" class="footer-products-multicolumn"></ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Quick Links</h4>
+                                        <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
@@ -336,7 +338,7 @@
                 </div>
             </div>
             
-            <div class="footer-socials">
+                        <div class="footer-socials">
                 <a href="https://www.facebook.com/p/Supreme-Enterprise-61566023002189/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/supremevalvesindia/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/company/supreme-valves-india/posts/?feedView=all" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
