Add Font Awesome CSS to projects and resources pages for footer icons

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="valve projects, industrial valve gallery, valve manufacturing photos, valve export images">
     <link rel="icon" type="image/svg+xml" href="assets/Supreme Valves.svg">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
         <header>
