--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="valve datasheets, valve catalogue download, industrial valve FAQs, technical resources valves">
     <link rel="icon" type="image/svg+xml" href="assets/Supreme Valves.svg">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
         <header>
