--- a/products/wafer-check-valve.html
+++ b/products/wafer-check-valve.html
@@ -18,7 +18,7 @@
       "@context": "https://schema.org",
       "@type": "Product",
       "name": "Wafer Check Valve",
-      "image": "https://www.supremevalves.in/assets/Valves and Projects/hero_image.jpeg",
+      "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/hero_image.jpeg",
       "description": "Lightweight check valves for installation between flanges.",
       "category": "Non-Return Valves",
       "brand": {
@@ -77,7 +77,7 @@
         <!-- Product Header -->
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; margin-bottom: 4rem;">
             <div>
-                <img src="../assets/Valves and Projects/hero_image.jpeg" alt="Wafer Check Valve" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
+                <img src="../assets/Valves%20and%20Projects/hero_image.jpeg" alt="Wafer Check Valve" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-lg);">
             </div>
             <div>
                 <span style="display: inline-block; padding: 0.5rem 1rem; background: var(--lighter-gray); color: var(--accent-color); border-radius: 6px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem;">Non-Return Valves</span>
