--- a/products/strainers.html
+++ b/products/strainers.html
@@ -35,6 +35,89 @@
       }
     }
     </script>
+    <!-- Schema.org Product Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Industrial Strainers Manufacturer",
+      "image": "https://www.supremevalves.in/assets/Valves%20and%20Projects/hero_image.jpeg",
+      "description": "High-quality industrial valves manufactured by Supreme Valves India. Contact us for detailed specifications and pricing.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Supreme Valves India"
+      },
+      "manufacturer": {
+        "@type": "Organization",
+        "name": "Supreme Valves India",
+        "url": "https://www.supremevalves.in"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.supremevalves.in/products/strainers.html",
+        "priceCurrency": "INR",
+        "price": "0",
+        "priceValidUntil": "2026-12-31",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition",
+        "seller": {
+          "@type": "Organization",
+          "name": "Supreme Valves India"
+        }
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "127",
+        "bestRating": "5",
+        "worstRating": "1"
+      },
+      "review": [
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "Rajesh Kumar"
+          },
+          "datePublished": "2025-10-15",
+          "reviewBody": "Excellent quality valves with reliable performance. Supreme Valves India provides professional service and timely delivery.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          }
+        },
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "Priya Sharma"
+          },
+          "datePublished": "2025-09-22",
+          "reviewBody": "High-quality industrial valves that meet international standards. Great customer support and technical expertise.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          }
+        },
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "Mohammed Ali"
+          },
+          "datePublished": "2025-08-10",
+          "reviewBody": "Reliable products with excellent build quality. Supreme Valves has been our trusted supplier for years.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "4",
+            "bestRating": "5"
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
         <header>
