--- a/products/nab-butterfly-valve-dn80-lug.html
+++ b/products/nab-butterfly-valve-dn80-lug.html
@@ -230,12 +230,14 @@
         </section>
     </main>
 
-    <footer class="footer-new">
+        <footer class="footer-new">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col footer-products-col">
                     <h4>Product Range</h4>
-                    <ul id="footer-products-list" class="footer-products-multicolumn"></ul>
+                    <ul id="footer-products-list" class="footer-products-multicolumn">
+                        <!-- Products will be dynamically loaded here -->
+                    </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
